cambio de color

--- a/index.html
+++ b/index.html
@@ -27,30 +27,28 @@
     }
   </script>
 </head>
-<div class="mx-auto my-6 w-11/12 border-spacing-1 border-2 border-indigo-500 p-10 text-indigo-500">
-  <nav class="grid grid-cols-12 gap-4">
-    <p class="col-span-6 border-b-2 border-indigo-500 pb-2 text-2xl font-thin uppercase">Orégano studio</p>
-    <p class="col-span-3 border-b-2 border-indigo-500 pb-2 text-2xl font-thin uppercase">Info →</p>
-    <a href="https://instagram.com/oreganostudiomx" class="col-span-3 border-b-2 border-indigo-500 pb-2 text-2xl font-thin uppercase">Síguenos  →</a>
+<div class="mx-auto my-6 w-11/12 border-spacing-1 border-2 border-green-500 p-10 text-green-500">
+  <nav class="grid sm:grid-cols-12 gap-4 grid-cols-3">
+    <p class="col-span-6 border-b-2 border-green-500 pb-2 text-2xl font-thin uppercase tracking-widest">Orégano studio</p>
+    <p class="col-span-3 border-b-2 border-green-500 pb-2 text-2xl font-thin uppercase tracking-widest">Info →</p>
+    <a href="https://instagram.com/oreganostudiomx" class="col-span-3 border-b-2 border-green-500 pb-2 text-2xl font-thin uppercase tracking-widest">Síguenos →</a>
     <p class="col-span-6 pr-16 text-3xl font-thin">Estudio multidisciplinario de servicios digitales para tu empresa.</p>
-    <a class="col-span-3" href=""><img src="https://freight.cargo.site/t/original/i/774c020f922f0a510960a95879c2cfcc11353f4dce72a5ae9828b1464075d78c/yj_tower_005af9.svg" style="width: 30px; height: 30px; margin-left: 5px; background-color: white;" shape-rendering="geometricPrecision" /></a>
-    <a href="https://oregano.studio" class="col-span-3 mt-4 flex flex-row-reverse"><img class="animate-waving-hand" src="assets/logo oregano.svg" width="150" border="0" /></a>
+    <a class="col-span-3" href=""><img src="https://freight.cargo.site/t/original/i/774c020f922f0a510960a95879c2cfcc11353f4dce72a5ae9828b1464075d78c/yj_tower_005af9.svg" style="width: 30px; height: 30px; margin-left: 5px; background-color: rgb(255, 255, 255);" shape-rendering="geometricPrecision" /></a>
+    <a href="https://oregano.studio" class="col-span-3 mt-4 flex sm:flex-row-reverse flex-initial"><img class="animate-waving-hand" src="//freight.cargo.site/w/150/q/94/i/1af5035f900b7cecd8157ee9b2bc24d3c29afb35d7ecd019806336ba22e09157/yj_bug_outlined_005af9.svg" width="150" border="0" /></a>
   </nav>
-  <div class="mt-8 w-full border-b-2 border-indigo-500"></div>
-  <section class="mt-4 grid grid-cols-1 md:grid-cols-2  gap-4">
-<a href="" class="h-96 w-full col-span-1 bg-agua hover:bg-cargo bg-cover bg-center"></a>
-<a href="" class="h-96 w-full col-span-1 bg-abstracto hover:bg-cargo bg-cover bg-center"></a>
-<a href="" class="h-96 w-full col-span-1 bg-imagensota hover:bg-cargo bg-cover bg-center"></a>
-<a href="" class="h-96 w-full col-span-1 bg-agua hover:bg-cargo bg-cover bg-center"></a>
-<a href="" class="h-96 w-full col-span-1 bg-abstracto hover:bg-cargo bg-cover bg-center"></a>
-<a href="" class="h-96 w-full col-span-1 bg-imagensota hover:bg-cargo bg-cover bg-center"></a>
+  <div class="mt-8 w-full border-b-2 border-green-500"></div>
+  <section class="mt-4 grid grid-cols-1 gap-4 md:grid-cols-2">
+    <a href="" class="col-span-1 h-96 w-full bg-agua bg-cover bg-center hover:bg-cargo"></a>
+    <a href="" class="col-span-1 h-96 w-full bg-abstracto bg-cover bg-center hover:bg-cargo"></a>
+    <a href="" class="col-span-1 h-96 w-full bg-imagensota bg-cover bg-center hover:bg-cargo"></a>
+    <a href="" class="col-span-1 h-96 w-full bg-agua bg-cover bg-center hover:bg-cargo"></a>
+    <a href="" class="col-span-1 h-96 w-full bg-abstracto bg-cover bg-center hover:bg-cargo"></a>
+    <a href="" class="col-span-1 h-96 w-full bg-imagensota bg-cover bg-center hover:bg-cargo"></a>
   </section>
-  <footer class="grid grid-cols-1 md:grid-cols-2 gap-4 mt-6 uppercase" >
-<p class="font-thin border-t-2 pt-4 border-indigo-500">copyright 2022</p>
-<p class="font-thin border-t-2 pt-4 border-indigo-500">Aguascalientes, Ags. México</p>
+  <footer class="mt-6 grid grid-cols-1 gap-4 uppercase md:grid-cols-2">
+    <p class="border-t-2 border-green-500 pt-4 font-thin">copyright 2022</p>
+    <p class="border-t-2 border-green-500 pt-4 font-thin">Aguascalientes, Ags. México</p>
   </footer>
 </div>
-
-
 </body>
 </html>
