favicon y link de inicio

--- a/index.html
+++ b/index.html
@@ -1,8 +1,13 @@
-<!doctype html>
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="icon" href="assets/Vector.png">
+  <title>Portafolio</title>
+</head>
+<body>
   <script src="https://cdn.tailwindcss.com"></script>
   <script>
     tailwind.config = {
@@ -29,7 +34,7 @@
 </head>
 <div class="mx-auto my-6 w-11/12 border-spacing-1 border-2 border-green-700 p-10 text-green-700">
   <nav class="grid sm:grid-cols-12 gap-4 grid-cols-3">
-    <p class="col-span-6 border-b-2 border-green-700 pb-2 text-2xl font-thin uppercase tracking-widest">Orégano studio</p>
+    <a href="#" class="col-span-6 border-b-2 border-green-700 pb-2 text-2xl font-thin uppercase tracking-widest">Orégano studio</a>
     <p class="col-span-3 border-b-2 border-green-700 pb-2 text-2xl font-thin uppercase tracking-widest">Info →</p>
     <a href="https://instagram.com/oreganostudiomx" class="col-span-3 border-b-2 border-green-700 pb-2 text-2xl font-thin uppercase tracking-widest">Síguenos →</a>
     <p class="col-span-6 pr-16 text-3xl font-thin">Estudio multidisciplinario de servicios digitales para tu empresa.</p>
