--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <p class="border-t-2 border-green-700 pt-4 font-thin">copyright 2022</p>
     <p class="border-t-2 border-green-700 pt-4 font-thin">Aguascalientes, Ags. México</p>
   </footer>
-<a href="recetas.html">recetas</a>
+<a href="recetas.html" class="bg-blue text-white">recetas</a>
 </div>
 </body>
 </html>
